Bug 1547191 - Make sure ThirdPartyUtil::GetBaseDomainFromWindow() correctly deals with nullptr arguments; r=baku a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D29030